# camigo-slice-ext-rs

./: Cargo.toml  README.md
src/: lib.rs  se_tests_2d.rs  se_tests_3d.rs  se_tests_bin_search.rs  se_tests_strs.rs
