[package]
name = "camigo-slice-ext"
version = "0.0.1"
# TODO Could this be 2018 edition?
edition = "2021"

description = "Cache-friendly comparison, binary & sequential search."
categories = ["algorithms", "caching", "data-structures", "no-std", "text-processing"]

authors = ["Peter Kehl <peter.kehl@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/peter-kehl/camigo"

# TODO MSRV

[features]
# Keep features here sorted alphabetically
alloc = []
std = ["alloc"]
deref_pure_trait = ["unsafe", "nightly"]
hint_assert_unchecked = ["unsafe"]
nightly = []

# real_blackbox = [] #TODO?
unsafe = ["unsafe_from_rust_source"]
unsafe_from_rust_source = []

default = ["alloc"] 
#default = ["hint_assert_unchecked", "hint_assert_unchecked", "deref_pure_trait"]
#default = ["fastrand"]
#default = ["alloc", "unsafe_from_rust_source", "deref_pure_trait"]
